# particle-android

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  FOR_MAINTAINERS.md  README.md  RELEASING.md  bintray_upload_v1.gradle  build.gradle  certificate.cer  gradle.properties  pom_generator_v1.gradle  settings.gradle
app/: CHANGELOG.md  README.md  build.gradle  proguard-rules.pro
app/libs/: cloudsdk.aar  devicesetup.aar  slf4android.aar
app/release/: output.json
app/src/debug/res/values/: config.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/animator/: pin_background_end.xml  pin_background_go_dark.xml  pin_background_start.xml
app/src/main/res/drawable/: bg_adaptive_icon.xml  bg_app_bar_gradient.xml  bg_device_filter_active.xml  bg_tinker_device_shadow.xml  device_filter_button_background_selected.xml  device_filter_button_background_unselected.xml  device_flashing_dot.xml  fab_label_background.xml  ic_arrow_down_black_24dp.xml  ic_collapse.xml  (+38 more)
app/src/main/res/drawable-v21/: spinner.xml
cloudsdk/: CHANGELOG  README.md  build.gradle
commonui/: build.gradle
commonui/src/main/: AndroidManifest.xml
devicesetup/: CHANGELOG  README.md  add_to_app_manifest.xml  build.gradle  lint.xml  proguard-rules.pro
devicesetup/src/main/: AndroidManifest.xml
ecjpake4j/: .gitignore  CMakeLists.txt  README  build.gradle  build_mbedtls.sh
ecjpake4j/src/androidTest/java/io/particle/ecjpake4j/: ExampleInstrumentedTest.java  JPAKEInstrumentedTest.kt
ecjpake4j/src/main/: AndroidManifest.xml
ecjpake4j/src/main/cpp/: ecjpake-jni-wrapper.c  native-lib.c  native-lib.h
ecjpake4j/src/main/java/io/particle/ecjpake4j/: ECJPake.kt  ECJPakeImpl.kt  EcJPake.kt  EcJPakeImpl.kt
ecjpake4j/src/main/res/values/: strings.xml
ecjpake4j/src/test/java/io/particle/ecjpake4j/: JPakeTest.kt
firmwareprotos/: README.md  build.gradle
firmwareprotos/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
mesh/: README.md  build.gradle
mesh/src/main/: AndroidManifest.xml
meshui/: README.md  build.gradle
meshui/src/main/: AndroidManifest.xml
sdk_example_app/: build.gradle
sdk_example_app/src/main/: AndroidManifest.xml
setup_exampleapp/: build.gradle  lint.xml
setup_exampleapp/src/main/: AndroidManifest.xml
setup_testapp/: build.gradle  proguard-rules.pro
setup_testapp/src/main/: AndroidManifest.xml
(+1118 files in other folders)
